test/compile_errors/stage1/obj/comptime_float_in_asm_input.zig
export fn foo() void {
    asm volatile ("" : : [bar]"r"(3.17) : "");
}

// comptime_float in asm input
//
// tmp.zig:2:35: error: expected sized integer or sized float, found comptime_float
